bundle_out.log
=================================================================================================
From React Native 0.73, your project's Metro config should extend '@react-native/metro-config'
or it will fail to build. Please copy the template at:
https://github.com/react-native-community/template/blob/main/template/metro.config.js
This warning will be removed in future (https://github.com/facebook/metro/issues/1018).
=================================================================================================

                        ▒▒▓▓▓▓▒▒
                     ▒▓▓▓▒▒░░▒▒▓▓▓▒
                  ▒▓▓▓▓░░░▒▒▒▒░░░▓▓▓▓▒
                 ▓▓▒▒▒▓▓▓▓▓▓▓▓▓▓▓▓▒▒▒▓▓
                 ▓▓░░░░░▒▓▓▓▓▓▓▒░░░░░▓▓
                 ▓▓░░▓▓▒░░░▒▒░░░▒▓▒░░▓▓
                 ▓▓░░▓▓▓▓▓▒▒▒▒▓▓▓▓▒░░▓▓
                 ▓▓░░▓▓▓▓▓▓▓▓▓▓▓▓▓▒░░▓▓
                 ▓▓▒░░▒▒▓▓▓▓▓▓▓▓▒░░░▒▓▓
                  ▒▓▓▓▒░░░▒▓▓▒░░░▒▓▓▓▒
                     ▒▓▓▓▒░░░░▒▓▓▓▒
                        ▒▒▓▓▓▓▒▒


                Welcome to Metro v0.83.2
              Fast - Scalable - Integrated


error SyntaxError: C:\SDA\src\services\newsService.js: Identifier 'Network' has already been declared. (5:12)

[0m [90m 3 |[39m [36mimport[39m { saveFeedCache[33m,[39m getFeedCache } [36mfrom[39m [32m'../utils/storage'[39m[33m;[39m
 [90m 4 |[39m
[31m[1m>[22m[39m[90m 5 |[39m [36mimport[39m [33m*[39m [36mas[39m [33mNetwork[39m [36mfrom[39m [32m'expo-network'[39m[33m;[39m
 [90m   |[39m             [31m[1m^[22m[39m
 [90m 6 |[39m [36mimport[39m { [33mXMLParser[39m } [36mfrom[39m [32m'fast-xml-parser'[39m[33m;[39m
 [90m 7 |[39m [36mimport[39m { saveFeedCache[33m,[39m getFeedCache } [36mfrom[39m [32m'../utils/storage'[39m[33m;[39m
 [90m 8 |[39m[0m.
SyntaxError: C:\SDA\src\services\newsService.js: Identifier 'Network' has already been declared. (5:12)

[0m [90m 3 |[39m [36mimport[39m { saveFeedCache[33m,[39m getFeedCache } [36mfrom[39m [32m'../utils/storage'[39m[33m;[39m
 [90m 4 |[39m
[31m[1m>[22m[39m[90m 5 |[39m [36mimport[39m [33m*[39m [36mas[39m [33mNetwork[39m [36mfrom[39m [32m'expo-network'[39m[33m;[39m
 [90m   |[39m             [31m[1m^[22m[39m
 [90m 6 |[39m [36mimport[39m { [33mXMLParser[39m } [36mfrom[39m [32m'fast-xml-parser'[39m[33m;[39m
 [90m 7 |[39m [36mimport[39m { saveFeedCache[33m,[39m getFeedCache } [36mfrom[39m [32m'../utils/storage'[39m[33m;[39m
 [90m 8 |[39m[0m
    at constructor (C:\SDA\node_modules\@babel\parser\lib\index.js:367:19)
    at FlowParserMixin.raise (C:\SDA\node_modules\@babel\parser\lib\index.js:6624:19)
    at FlowScopeHandler.checkRedeclarationInScope (C:\SDA\node_modules\@babel\parser\lib\index.js:1646:19)
    at FlowScopeHandler.declareName (C:\SDA\node_modules\@babel\parser\lib\index.js:1612:12)
    at FlowScopeHandler.declareName (C:\SDA\node_modules\@babel\parser\lib\index.js:1713:11)
    at FlowParserMixin.declareNameFromIdentifier (C:\SDA\node_modules\@babel\parser\lib\index.js:7594:16)
    at FlowParserMixin.checkIdentifier (C:\SDA\node_modules\@babel\parser\lib\index.js:7590:12)
    at FlowParserMixin.checkLVal (C:\SDA\node_modules\@babel\parser\lib\index.js:7527:12)
    at FlowParserMixin.finishImportSpecifier (C:\SDA\node_modules\@babel\parser\lib\index.js:14342:10)
    at FlowParserMixin.parseImportSpecifierLocal (C:\SDA\node_modules\@babel\parser\lib\index.js:3410:31)
    at FlowParserMixin.maybeParseStarImportSpecifier (C:\SDA\node_modules\@babel\parser\lib\index.js:14456:12)
    at FlowParserMixin.parseImportSpecifiersAndAfter (C:\SDA\node_modules\@babel\parser\lib\index.js:14317:39)
    at FlowParserMixin.parseImport (C:\SDA\node_modules\@babel\parser\lib\index.js:14311:17)
    at FlowParserMixin.parseStatementContent (C:\SDA\node_modules\@babel\parser\lib\index.js:12952:27)
    at FlowParserMixin.parseStatementLike (C:\SDA\node_modules\@babel\parser\lib\index.js:12843:17)
    at FlowParserMixin.parseStatementLike (C:\SDA\node_modules\@babel\parser\lib\index.js:2945:24)
    at FlowParserMixin.parseModuleItem (C:\SDA\node_modules\@babel\parser\lib\index.js:12820:17)
    at FlowParserMixin.parseBlockOrModuleBlockBody (C:\SDA\node_modules\@babel\parser\lib\index.js:13392:36)
    at FlowParserMixin.parseBlockBody (C:\SDA\node_modules\@babel\parser\lib\index.js:13385:10)
    at FlowParserMixin.parseProgram (C:\SDA\node_modules\@babel\parser\lib\index.js:12698:10)
    at FlowParserMixin.parseTopLevel (C:\SDA\node_modules\@babel\parser\lib\index.js:12688:25)
    at FlowParserMixin.parseTopLevel (C:\SDA\node_modules\@babel\parser\lib\index.js:3714:28)
    at FlowParserMixin.parse (C:\SDA\node_modules\@babel\parser\lib\index.js:14568:25)
    at parse (C:\SDA\node_modules\@babel\parser\lib\index.js:14581:26)
    at parser (C:\SDA\node_modules\@babel\core\lib\parser\index.js:41:34)
    at parser.next (<anonymous>)
    at normalizeFile (C:\SDA\node_modules\@babel\core\lib\transformation\normalize-file.js:64:37)
    at normalizeFile.next (<anonymous>)
    at run (C:\SDA\node_modules\@babel\core\lib\transformation\index.js:22:50)
    at run.next (<anonymous>)
    at transform (C:\SDA\node_modules\@babel\core\lib\transform.js:22:33)
    at transform.next (<anonymous>)
    at evaluateSync (C:\SDA\node_modules\gensync\index.js:251:28)
    at sync (C:\SDA\node_modules\gensync\index.js:89:14)
    at stopHiding - secret - don't use this - v1 (C:\SDA\node_modules\@babel\core\lib\errors\rewrite-stack-trace.js:47:12)
    at Object.transformSync (C:\SDA\node_modules\@babel\core\lib\transform.js:42:76)
    at parseWithBabel (C:\SDA\node_modules\expo\node_modules\@expo\metro-config\build\transformSync.js:75:18)
    at transformSync (C:\SDA\node_modules\expo\node_modules\@expo\metro-config\build\transformSync.js:64:12)
    at Object.transform (C:\SDA\node_modules\expo\node_modules\@expo\metro-config\build\babel-transformer.js:127:58)
    at transformJSWithBabel (C:\SDA\node_modules\expo\node_modules\@expo\metro-config\build\transform-worker\metro-transform-worker.js:468:47)
    at Object.transform (C:\SDA\node_modules\expo\node_modules\@expo\metro-config\build\transform-worker\metro-transform-worker.js:583:12)
    at Object.transform (C:\SDA\node_modules\expo\node_modules\@expo\metro-config\build\transform-worker\transform-worker.js:178:19)
    at transformFile (C:\SDA\node_modules\metro\src\DeltaBundler\Worker.flow.js:67:36)
    at Object.transform (C:\SDA\node_modules\metro\src\DeltaBundler\Worker.flow.js:42:10)
    at execFunction (C:\SDA\node_modules\jest-worker\build\workers\processChild.js:149:17)
    at execHelper (C:\SDA\node_modules\jest-worker\build\workers\processChild.js:137:5)
    at execMethod (C:\SDA\node_modules\jest-worker\build\workers\processChild.js:140:5)
    at process.messageListener (C:\SDA\node_modules\jest-worker\build\workers\processChild.js:44:7)
    at process.emit (node:events:518:28)
    at emit (node:internal/child_process:949:14)
